update delivery api
