# docs/api/api.yaml
@@ -354,6 +354,11 @@ components:
           type: number
           format: double
           description: Delivery fees
+        expectedDelivered:
+          type: string
+          format: date-time
+          description: Expected delivery date
+          nullable: true
         shippingAddress:
           type: object
           $ref: "#/components/schemas/Address"
@@ -502,10 +507,16 @@ components:
           type: integer
           format: int64
           description: ID of the shipping method
-        shippingRate:
-          type: number
-          format: double
-          description: Shipping Fees
+        country:
+          type: string
+          description: Delivery country
+        cityId:
+          type: integer
+          format: int64
+          description: Delivery city
+          nullable: true
+      required:
+        - country
 
     ListAddressResponse:
       type: object
