# src/main/kotlin/com/wutsi/ecommerce/order/dto/SetShippingMethodRequest.kt
@@ -1,9 +1,12 @@
 package com.wutsi.ecommerce.order.dto
 
-import kotlin.Double
+import javax.validation.constraints.NotBlank
 import kotlin.Long
+import kotlin.String
 
 public data class SetShippingMethodRequest(
     public val shippingId: Long = 0,
-    public val shippingRate: Double = 0.0
+    @get:NotBlank
+    public val country: String = "",
+    public val cityId: Long? = null
 )
